# disco

./: Cargo.toml  cube.mtl  sliced.html
src/: frag.glsl  main.rs  main_v.rs  model.rs  polygons.rs  util.rs  vert.glsl
