[package]
name = "disco"
version = "0.1.0"
authors = ["Simon Niedermayr <14186588+KeKsBoTer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#vulkano = "0.18"
#vulkano-win = "0.18"
#vulkano-shaders = "0.18"
#winit = "0.22.0"
cgmath = "0.17.0"
tobj = "1.0.0"
image = "0.23.4"